--- a/Task 10 - Use of Continue and pass keyword.ipynb
+++ b/Task 10 - Use of Continue and pass keyword.ipynb
@@ -58,23 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current Letter : P\n",
-      "Current Letter : y\n",
-      "Current Letter : t\n",
-      "Current Letter : o\n",
-      "Current Letter : n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Task 10.1 = what is the uasge of continue with an example.\n",
+    "# Task 10.1 = what is the uasge of continue with an example.\n",
     "'''\n",
     "#Explaination:\n",
     "The continue statement rejects all the remaining statements in the current \n",
@@ -91,7 +79,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Task 10.2 What is pass keyword, with example\n",
+    "'''\n",
+    "The pass statement is used as a placeholder for future code.\n",
+    "When the pass statement is executed, nothing happens, but you avoid getting an error when empty code is not allowed.\n",
+    "Empty code is not allowed in loops, function definitions, class definitions, or in if statements.\n",
+    "'''\n",
+    "if(14>12):\n",
+    "    pass   "
+   ]
   }
  ],
  "metadata": {
