--- a/Task 9 -  Addition, Subtraction, Multiplication, Division.ipynb
+++ b/Task 9 -  Addition, Subtraction, Multiplication, Division.ipynb
@@ -6,31 +6,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "#Task 9\n",
     "#Ask 2 numbers from users and store it in num1 and num2\n",
     "#Ask user to press 1 for addition,2 for subtraction,3 for multiplication and 4 for division\n",
     "#based on number given by user do the math operation\n",
     "\n",
-    "Num1 = int(input('Enter First Number :'))\n",
+    "print('1.Add')\n",
+    "print('2.Subtraction')\n",
+    "print('3.multiplication')\n",
+    "print('4.division')\n",
+    "ch = int(input('Enter any of these char for specific operation : '))\n",
+    "\n",
+    "Num1 = int(input('Enter First Number  : '))\n",
     "Num2 = int(input('Enter Second Number : '))\n",
     "\n",
-    "print('Enter which operation would you like to perform ?')\n",
-    "ch = input('Enter any of these char for specific operation +,-,*,/: ')\n",
-    "\n",
-    "result = 0\n",
-    "if ch == '+':\n",
-    "    result = Num1 + Num2\n",
-    "elif ch == '-':\n",
-    "    result = Num1 - Num2\n",
-    "elif ch == '*':\n",
-    "    result = Num1 * Num2\n",
-    "elif ch == '/':\n",
-    "    result = Num1 / Num2\n",
+    "if ch == 1:\n",
+    "    print('Answer : ', Num1 + Num2)\n",
+    "elif ch == 2:\n",
+    "    print('Answer : ',Num1 - Num2)\n",
+    "elif ch == 3:\n",
+    "    print('Answer : ',Num1 * Num2)\n",
+    "elif ch == 4:\n",
+    "    print('Answer : ',Num1 / Num2)\n",
     "else:\n",
-    "    print(\"Input character is not recognized!\")\n",
-    "\n",
-    "print(Num1, ch , Num2, \":\", result)\n"
+    "    print('Enter value between 1 to 4')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
