--- a/Task 11 - Return keywords and four separate functions.ipynb
+++ b/Task 11 - Return keywords and four separate functions.ipynb
@@ -46,28 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add(Num1, Num2):      #For Add function\n",
-    "   return Num1 + Num2\n",
-    "\n",
-    "def subtraction(Num1, Num2):   \n",
-    "   return Num1 - Num2\n",
-    "\n",
-    "\n",
-    "def multiplication(Num1, Num2):\n",
-    "   return Num1 * Num2\n",
-    "\n",
-    "\n",
-    "def division(Num1, Num2):\n",
-    "   return Num1 + Num2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -75,63 +56,49 @@
      "text": [
       "1.Add\n",
       "2.Subtraction\n",
-      "3.multiplication\n",
-      "4.division\n",
-      "Enter any of these char for specific operation : 2\n",
-      "Enter First Number  : 3\n",
-      "Enter Second Number : 3\n",
-      "Answer :  0\n"
+      "3.Multiplication\n",
+      "4.Division\n"
      ]
     }
    ],
    "source": [
+    "def Add(Num1, Num2):                #For Add function\n",
+    "    return Num1 + Num2\n",
+    "\n",
+    "def Subtraction(Num1, Num2):        #For Subtraction function\n",
+    "    return Num1 - Num2\n",
+    "\n",
+    "def Multiplication(Num1, Num2):     #For Multiplication function\n",
+    "    return Num1 * Num2\n",
+    "\n",
+    "def Division(Num1, Num2):           #For Division function\n",
+    "    return Num1 + Num2\n",
+    "\n",
     "print('1.Add')\n",
     "print('2.Subtraction')\n",
-    "print('3.multiplication')\n",
+    "print('3.Multiplication')\n",
     "print('4.Division')\n",
     "ch = int(input('Enter any of these char for specific operation : '))\n",
     "\n",
-    "Num1 = int(input('Enter First Number  : '))\n",
-    "Num2 = int(input('Enter Second Number : '))\n",
-    "\n",
     "if ch == 1:\n",
-    "    print('Answer : ', Num1 + Num2)\n",
+    "    Num1 = int(input('Enter First Number  : '))\n",
+    "    Num2 = int(input('Enter Second Number : '))\n",
+    "    print(Add(Num1,Num2))\n",
     "elif ch == 2:\n",
-    "    print('Answer : ',Num1 - Num2)\n",
+    "    Num1 = int(input('Enter First Number  : '))\n",
+    "    Num2 = int(input('Enter Second Number : '))\n",
+    "    print(Subtraction(Num1,Num2))\n",
     "elif ch == 3:\n",
-    "    print('Answer : ',Num1 * Num2)\n",
+    "    Num1 = int(input('Enter First Number  : '))\n",
+    "    Num2 = int(input('Enter Second Number : '))\n",
+    "    print(Multiplication(Num1,Num2))\n",
     "elif ch == 4:\n",
-    "    print('Answer : ',Num1 / Num2)\n",
+    "    Num1 = int(input('Enter First Number  : '))\n",
+    "    Num2 = int(input('Enter Second Number : '))\n",
+    "    print(Division(Num1,Num2))\n",
     "else:\n",
     "    print('Enter value between 1 to 4')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Subtraction(4,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -146,18 +113,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
