--- a/Task 11 - Return keywords and four separate functions.ipynb
+++ b/Task 11 - Return keywords and four separate functions.ipynb
@@ -49,18 +49,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.Add\n",
-      "2.Subtraction\n",
-      "3.Multiplication\n",
-      "4.Division\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def Add(Num1, Num2):                #For Add function\n",
     "    return Num1 + Num2\n",
@@ -113,6 +102,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
