--- a/Task 7 - Other inbuilt  methods 1) difference() 2) symmetric_difference().ipynb
+++ b/Task 7 - Other inbuilt  methods 1) difference() 2) symmetric_difference().ipynb
@@ -25,13 +25,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = {1,2,3,4,5}\n",
-    "B = {2,3,6,7,8}\n",
-    "C = {}\n",
-    "print(a.symmetric_difference(b))\n",
-    "print(b.symmetric_difference(a))\n",
-    "print(a.symmetric_difference(c))"
+    "a = {1,2,3,4,5}\n",
+    "b = {2,3,6,7,8}\n",
+    "c = {}\n",
+    "print(a.difference(b))\n",
+    "print(b.difference(a))\n",
+    "print(a.difference(c))\n",
+    "print(b.difference(c))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
